# music_id

./: .env  Cargo.toml  README.md
migrations/2022-12-24-190713_create_music/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: error.html  quiz.html
