[package]
name = "music_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15"
actix-web = "4"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
askama = "0.11.1"
rand = "0.8.5"
reqwest = "0.11.13"
